# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/user/: dtos.py  exceptions.py  models.py  router.py  test_router.py  user_service.py
migrations/: env.py
migrations/versions/: e6c30d65aee8_init.py
tests/: conftest.py  setup.py  test_user.py
