[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["nawawishkid <nawawish.samerpark@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
SQLAlchemy = "^1.4.15"
alembic = "^1.6.3"
gunicorn = "^20.1.0"
taskipy = "^1.8.1"
pydantic = {extras = ["email"], version = "^1.8.2"}
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
autopep8 = "^1.5.7"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -xv"
dev = "uvicorn app.main:app --reload"
start = "gunicorn -k uvicorn.workers.UvicornWorker app.main:app"